--- a/sites/about.html
+++ b/sites/about.html
@@ -147,6 +147,7 @@
           <a href="https://abrookst.github.io/sites/portfolio.html"><p>>>Portfolio</p></a>
           <a href="https://abrookst.github.io/sites/contact.html"><p>>>Contact</p></a>
           <a href="https://abrookst.github.io/sites/blog.html"><p>>>Blog</p></a>
+          <a href="https://abrookst.github.io/sites/resume.html"><p>>>Resume</p></a>
         </div>
       </div>
       <div class="contentblock">
@@ -159,7 +160,6 @@
           </div>
         </div>
         <div class="contentC">
-          <div class="contentC" style="font-family: 'apple_regular';">
             <p>How much do you want to know about me?</p>
             <!--thanks for the idea junfero-->
             <div>
@@ -228,7 +228,6 @@
               }
             </script>
         </div>
-      </div>
     </div>
   </body>
 </html>
