--- a/sites/resume.html
+++ b/sites/resume.html
@@ -135,7 +135,7 @@
     <div class="wrapp">
       <div class="navblock">
         <div class="header">
-          <p class="headertext">my code.html</p>
+          <p class="headertext">resume.html</p>
           <div id="controls">
             <a><img width="20" src="/images/button_minimize.png"></a>
             <img width="20" src="/images/button_maximize.png">
@@ -144,15 +144,15 @@
         </div>
         <div class="contentN">
           <a href="https://abrookst.github.io/sites/about.html"><p>>>About</p></a>
-          <a href="https://abrookst.github.io/sites/portfolio.html"><p>>>>Portfolio</p></a>
+          <a href="https://abrookst.github.io/sites/portfolio.html"><p>>>Portfolio</p></a>
           <a href="https://abrookst.github.io/sites/contact.html"><p>>>Contact</p></a>
           <a href="https://abrookst.github.io/sites/blog.html"><p>>>Blog</p></a>
-          <a href="https://abrookst.github.io/sites/resume.html"><p>>>Resume</p></a>
+          <a href="https://abrookst.github.io/sites/resume.html"><p>>>>Resume</p></a>
         </div>
       </div>
       <div class="contentblock">
         <div class="header">
-          <p class="headertext">portfolio.html</p>
+          <p class="headertext">resume.html</p>
           <div id="controls">
             <img width="20" src="/images/button_minimize.png">
             <img width="20" src="/images/button_maximize.png">
@@ -160,15 +160,8 @@
           </div>
         </div>
         <div class="contentC">
-          
-          <div class="github-card" data-github="abrookst" data-width="400" data-height="" data-theme="default"></div>
-          <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
-          <br>
-          <iframe src="https://itch.io/embed/1691549" width="552" height="167" frameborder="0"><a href="https://abrooks.itch.io/cathartic-cartography" target="_blank">Cathartic Cartography! by abrooks</a></iframe>
-          <br>
-          <iframe src="https://itch.io/embed/1106726" width="552" height="167" frameborder="0"><a href="https://abrooks.itch.io/beautiful-melodius" target="_blank">BEAUTIFUL MELODIUS (美しいメロディウス) by abrooks</a></iframe>
-          <br>
-          <a href="https://replit.com/@AliBrooks/" target="_blank"><li>(OLD) Replit account</li></a>
+  
+          <embed src="files/resume.pdf" width="800px" height="2100px" />
 
         </div>
       </div>
