--- a/sites/resume.html
+++ b/sites/resume.html
@@ -161,7 +161,7 @@
         </div>
         <div class="contentC">
   
-          <embed src="files/resume.pdf" width="800px" height="2100px" />
+          <iframe src="files/resume.pdf" width="500" height="700">
 
         </div>
       </div>
