--- a/sites/resume.html
+++ b/sites/resume.html
@@ -161,7 +161,9 @@
         </div>
         <div class="contentC">
   
-          <iframe src="files/resume.pdf" width="500" height="700">
+          <object data="files/resume.pdf" type="application/pdf">
+            alt : <a href="files/resume.pdf">resume.pdf</a>
+          </object>
 
         </div>
       </div>
