--- a/sites/resume.html
+++ b/sites/resume.html
@@ -161,9 +161,7 @@
         </div>
         <div class="contentC">
   
-          <object data="files/resume.pdf" type="application/pdf">
-            alt : <a href="files/resume.pdf">resume.pdf</a>
-          </object>
+          <embed src="/files/resume.pdf" width="auto" height="77.5vh" />
 
         </div>
       </div>
