--- a/sites/resume.html
+++ b/sites/resume.html
@@ -161,7 +161,7 @@
         </div>
         <div class="contentC">
   
-          <embed src="/files/resume.pdf" width="auto" height="77.5vh" />
+          <embed src="/files/resume.pdf" width="100%" height="100%" />
 
         </div>
       </div>
