link add and fix

--- a/sites/portfolio.html
+++ b/sites/portfolio.html
@@ -168,7 +168,7 @@
           <br>
           <iframe src="https://itch.io/embed/1106726" width="552" height="167" frameborder="0"><a href="https://abrooks.itch.io/beautiful-melodius" target="_blank">BEAUTIFUL MELODIUS (美しいメロディウス) by abrooks</a></iframe>
           <br>
-          <a href="https://replit.com/@AliBrooks/" target="_blank"><li>(OLD) Replit account</li></a>
+          <u><a href="https://replit.com/@AliBrooks/" target="_blank"><li>(OLD) Replit account</li></a></u>
 
         </div>
       </div>
