--- a/sites/resume.html
+++ b/sites/resume.html
@@ -161,8 +161,8 @@
         </div>
         <div class="contentC">
   
-          <embed src="/files/resume.pdf" width="100%" height="100%" />
-
+          <embed src="/files/resume.pdf" width="100%" height="85%" />
+          <u><a href="/files/resume.pdf" download><p>download</p></a></u>
         </div>
       </div>
     </div>
