--- a/sites/portfolio.html
+++ b/sites/portfolio.html
@@ -135,7 +135,7 @@
     <div class="wrapp">
       <div class="navblock">
         <div class="header">
-          <p class="headertext">my code.html</p>
+          <p class="headertext">navigator.html</p>
           <div id="controls">
             <a><img width="20" src="/images/button_minimize.png"></a>
             <img width="20" src="/images/button_maximize.png">
