--- a/sites/portfolio.html
+++ b/sites/portfolio.html
@@ -161,14 +161,13 @@
         </div>
         <div class="contentC">
           
+          <embed src="/files/games_resume.pdf" width="100%" height="85%" />
+          <u><a href="/files/games_resume.pdf" download><p>download</p></a></u>
+          <br>
+          <p>Want to see the source code for my games, or see non-game related projects?</p>
+          <p>Check out my github below!</p>
           <div class="github-card" data-github="abrookst" data-width="400" data-height="" data-theme="default"></div>
           <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
-          <br>
-          <iframe frameborder="0" src="https://itch.io/embed/1752865" width="552" height="167"><a href="https://abrookst.itch.io/mythological-melee">Mythological Melee by ALI</a></iframe>
-          <br>
-          <iframe src="https://itch.io/embed/1691549" width="552" height="167" frameborder="0"><a href="https://abrooks.itch.io/cathartic-cartography" target="_blank">Cathartic Cartography! by abrooks</a></iframe>
-          <br>
-          <iframe src="https://itch.io/embed/1106726" width="552" height="167" frameborder="0"><a href="https://abrooks.itch.io/beautiful-melodius" target="_blank">BEAUTIFUL MELODIUS (美しいメロディウス) by abrooks</a></iframe>
           <br>
           <u><a href="https://replit.com/@AliBrooks/" target="_blank"><li>(OLD) Replit account</li></a></u>
 
