--- a/sites/portfolio.html
+++ b/sites/portfolio.html
@@ -161,8 +161,8 @@
         </div>
         <div class="contentC">
           
-          <embed src="/files/games_resume.pdf" width="100%" height="85%" />
-          <u><a href="/files/games_resume.pdf" download><p>download</p></a></u>
+          <embed src="/files/games.pdf" width="100%" height="85%" />
+          <u><a href="/files/games.pdf" download><p>download</p></a></u>
           <br>
           <p>Want to see the source code for my games, or see non-game related projects?</p>
           <p>Check out my github below!</p>
