--- a/sites/portfolio.html
+++ b/sites/portfolio.html
@@ -163,7 +163,7 @@
           
           <embed src="/files/games.pdf" width="100%" height="85%" />
           <u><a href="/files/games.pdf" download><p>download pdf</p></a></u>
-          <u><a href="abrookst.itch.io" download><p>check out the games on itch!</p></a></u>
+          <u><a href="https://abrookst.itch.io/" download><p>check out the games on itch!</p></a></u>
           <br>
           <p>Want to see the source code for my games, or see non-game related projects?</p>
           <p>Check out my github below!</p>
