--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&amp;display=swap" rel="stylesheet">
-    <title>Ali Brooks</title>
+    <title>Ali Brooks p</title>
     <link href="/stylemain.css" rel="stylesheet" type="text/css" media="all">
-  </head>
+  </head> 
   <body>
     <center>
       <a href="https://abrookst.github.io/"><p class="title">Ali Brooks</p>
