--- a/sites/contact.html
+++ b/sites/contact.html
@@ -10,7 +10,7 @@
   <body>
     <center>
       <a href="https://abrookst.github.io/"><p class="title">Ali Brooks</p>
-      <p style="margin:0; font-size:10px; color: #ffffff;">Independent Game Designer and Aspiring Computer Scientist</p></a>
+      <p class="subtitle">Independent Game Designer and Aspiring Computer Scientist</p></a>
     </center>
     <div class="wrapp">
       <div class="navblock">
