--- a/sites/about.html
+++ b/sites/about.html
@@ -10,7 +10,7 @@
   <body>
     <center>
       <a href="https://abrookst.github.io/"><p class="title">Ali Brooks</p>
-      <p class="subtitle">Independent Game Designer and Aspiring Computer Scientist</p></a>
+      <p class="subtitle">Web Developer, Game Designer, and All-Round Computer Scientist</p></a>
     </center>
     <div class="wrapp">
       <div class="navblock">
