removed portfolio, reformatting

--- a/sites/about.html
+++ b/sites/about.html
@@ -24,10 +24,9 @@
         </div>
         <div class="contentN">
           <a href="https://abrookst.github.io/sites/about.html"><p>>>>About</p></a>
-          <a href="https://abrookst.github.io/sites/portfolio.html"><p>>>Portfolio</p></a>
+          <a href="https://abrookst.github.io/sites/resume.html"><p>>>Resume</p></a>
           <a href="https://abrookst.github.io/sites/contact.html"><p>>>Contact</p></a>
           <a href="https://abrookst.github.io/sites/blog.html"><p>>>Blog</p></a>
-          <a href="https://abrookst.github.io/sites/resume.html"><p>>>Resume</p></a>
         </div>
       </div>
       <div class="contentblock">
@@ -52,18 +51,22 @@
             <br>
             <!--TLDR-->
             <div id='tldr' class='subdescrip'>
-              <p>Hi! I'm Ali.</p>
-              <p>I go 2 RPI 4 CS/ITWS & I &#60;3 CS/ITWS!</p>
+              <p>\\I don't actually code like this</p>
+              <p>char name[] = "Ali";</p>
+              <p>goto:RPI;</p>
+              <p>RPI:for(CS/ITWS){ </p>
+              <p style="text-indent: 30px;">printf("I &#60;3 CS/ITWS!");</p>
+              <p>} </p>
             </div>  
             <!--Default-->
             <div id='default' class='subdescrip'>
               <p>Hello! My name is Ali Brooks.</p>
               <br>
-              <p>I'm an aspiring computer scientist, and current independent game designer.</p>
+              <p>I'm a computer scientist, web developer, and game designer.</p>
               <br>
               <p>I'm attending at Rensslear Polytechnic Institute for my Bachelors in Computer Science with a dual in ITWS.</p>
               <br>
-              <p>I love all aspects of CS, but I particularly love artificial inteligence, virtual reality, augmented reality, cyber security, and game development.</p>
+              <p>I love all aspects of CS, but I particularly love artificial inteligence, web design, virtual reality, augmented reality, cyber security, and game development.</p>
               <br>
               <p>Outside of that, I love reading, writing, playing video games, and diving down research rabbit holes to scratch my curiosity itch!</p>
               <br>
@@ -72,15 +75,19 @@
             <div id='TMI' class='subdescrip'>
               <p>Greetings! It's very nice to meet you, my name is Ali Brooks.</p>
               <br>
-              <p>I'm an aspiring computer scientist, and current independent game designer. You can find some of the games I made in my Portfolio page!</p>
+              <p>I'm a computer scientist, web developer, and game designer. You can find some of the games I made in my Portfolio page! And you're looking at a website I made right now!</p>
               <br>
-              <p>I'm attending Rensslear Polytechnic Institute in Troy New York for my Bachelors in Computer Science major, and I am dualing in ITWS (Information Technology and Web Sciences).</p>
+              <p>I'm attending Rensslear Polytechnic Institute in Troy New York for my Bachelors in Computer Science, and I am also dualing in ITWS (Information Technology and Web Science).</p>
               <br>
               <p>I went to Gilman in Baltimore Maryland for highschool, where I learned about Java programming in AP Computer Science A, and Java Data Structures in Honors Advanced Topics In Computer Science.</p>
               <br>
               <p>While I was in highschool, I taught myself HTML/CSS and python. And I am currently learning and using Javascript and C++ primarily.</p>
               <br>
-              <p>Outside of that, I love reading, writing, playing video games, working at cat shelters, working in bee hives, and diving down research rabbit holes to scratch my curiosity itch! I've also been practicing my art.</p>
+              <p>During the Spring of 2023, I worked on research under Professor Brett Fajen where I maintained a simulation system for tracking the eye movements of drone pilots in Unity C#.</p>
+              <br>
+              <p>In the Summer of 2023, I worked at Firaxis games in Baltimore Maryland. Where I worked under Mr. Tronster Heartley as a UI/UX intern.</p>
+              <br>
+              <p>When I can find time inbetween all of this, I love reading, writing, playing video games, working at cat shelters, working in bee hives, and diving down research rabbit holes to scratch my curiosity itch!</p>
               <br>
             </div>
             <script>
