--- a/sites/resume.html
+++ b/sites/resume.html
@@ -23,11 +23,10 @@
           </div>
         </div>
         <div class="contentN">
-          <a href="https://abrookst.github.io/sites/about.html"><p>>>About</p></a>
-          <a href="https://abrookst.github.io/sites/portfolio.html"><p>>>Portfolio</p></a>
+          <a href="https://abrookst.github.io/sites/about.html"><p>>>>About</p></a>
+          <a href="https://abrookst.github.io/sites/resume.html"><p>>>>Resume</p></a>
           <a href="https://abrookst.github.io/sites/contact.html"><p>>>Contact</p></a>
           <a href="https://abrookst.github.io/sites/blog.html"><p>>>Blog</p></a>
-          <a href="https://abrookst.github.io/sites/resume.html"><p>>>>Resume</p></a>
         </div>
       </div>
       <div class="contentblock">
@@ -40,9 +39,11 @@
           </div>
         </div>
         <div class="contentC">
-  
+          <u><a href="https://abrookst.itch.io/" download><p>itch.io (games)</p></a></u>
+          <u><a href="https://github.com/abrookst" download><p>github</p></a></u>
           <embed src="/files/resume.pdf" width="100%" height="85%" />
-          <u><a href="/files/resume.pdf" download><p>download</p></a></u>
+          <u><a href="/files/resume.pdf" download><p>download resume</p></a></u>
+          
         </div>
       </div>
     </div>
