--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
         </div>
         <div class="contentN">
           <a href="https://abrookst.github.io/sites/about.html"><p>>>About</p></a>
-          <a href="https://abrookst.github.io/sites/portfolio.html"><p>>>Portfolio</p></a>
-          <a href="https://abrookst.github.io/sites/contact.html"><p>>>Contact</p></a>
-          <a href="https://abrookst.github.io/sites/blog.html"><p>>>Blog</p></a>
           <a href="https://abrookst.github.io/sites/resume.html"><p>>>Resume</p></a>
+          <a href="https://abrookst.github.io/sites/contact.html"><p>>>Contact</p></a>
+          <a href="https://abrookst.github.io/sites/blog.html"><p>>>>Blog</p></a>
         </div>
       </div>
       <div class="contentblock">
