--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <a href="https://abrookst.github.io/sites/about.html"><p>>>About</p></a>
           <a href="https://abrookst.github.io/sites/resume.html"><p>>>Resume</p></a>
           <a href="https://abrookst.github.io/sites/contact.html"><p>>>Contact</p></a>
-          <a href="https://abrookst.github.io/sites/blog.html"><p>>>>Blog</p></a>
+          <a href="https://abrookst.github.io/sites/blog.html"><p>>>Blog</p></a>
         </div>
       </div>
       <div class="contentblock">
