small resume fix

--- a/sites/resume.html
+++ b/sites/resume.html
@@ -23,7 +23,7 @@
           </div>
         </div>
         <div class="contentN">
-          <a href="https://abrookst.github.io/sites/about.html"><p>>>>About</p></a>
+          <a href="https://abrookst.github.io/sites/about.html"><p>>>About</p></a>
           <a href="https://abrookst.github.io/sites/resume.html"><p>>>>Resume</p></a>
           <a href="https://abrookst.github.io/sites/contact.html"><p>>>Contact</p></a>
           <a href="https://abrookst.github.io/sites/blog.html"><p>>>Blog</p></a>
