--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   
           <p>Hello! My name is Ali Brooks. And this is my portfolio website!</p>
           <br>
-          <p>If you'd like to learn more about me and what I do, feel free to cick on the links in the navigation window to the left!</p>
+          <p>If you'd like to learn more about me and what I do, feel free to click on the links in the navigation window to the left!</p>
         </div>
       </div>
     </div>
